# FiniteElement

./: .gitignore  CMakeLists.txt  Makefile  README.md
apps/: CMakeLists.txt
apps/simple/: CMakeLists.txt  main.cpp
fea/: CMakeLists.txt  Element.h  FEASystem.cpp  FEASystem.h  Force.h  MaterialModel.h  Node.cpp  Node.h
fea/elements/: Tetrahedral.cpp  Tetrahedral.h  Triangle.cpp  Triangle.h
fea/forces/: AnchorForce.cpp  AnchorForce.h  ConstantForce.cpp  ConstantForce.h
fea/materials/: LinearElasticModel.cpp  LinearElasticModel.h  StVenantKirchhoff.cpp  StVenantKirchhoff.h
fea/solvers/: EigenLinearSolver.cpp  EigenLinearSolver.h
gpu/: CMakeLists.txt  main.cpp  main.cu
gpu/fea/: FEAInterface.h  GpuFEASystem.cu  GpuFEASystem.cuh  GpuForce.cuh
gpu/fea/forces/: ElasticForce.cu  ElasticForce.cuh  GpuConstantForce.cu  GpuConstantForce.cuh
gpu/integration/: GpuIterativeBackwardEuler.cu  GpuIterativeBackwardEuler.cuh
gpu/math/: GpuMath.cuh
integration/: CMakeLists.txt  MathSystem.h  PhysicalSystem.h
integration/solvers/: BackwardEuler.h  ForwardEuler.h  LinearSolver.h  Solver.h
integration/solvers/iterative/: ConjugateGradientSolver.h  IterativeBackwardEuler.h
test/: CMakeLists.txt
test/fea/: CMakeLists.txt  main.cpp
test/integration/: CMakeLists.txt  main.cpp
test/iterative/: CMakeLists.txt  main.cpp
